cruzy-demo/force-app/main/default/objects/Saved_Card__c/Saved_Card__c.object-meta.xml
<CustomObject>
    <description>Stores tokenized payment method references for Authorize.net-connected cards on file per contact.</description>
    <label>Saved Card</label>
    <nameField>
        <label>Card Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>