cruzy-demo/force-app/main/default/objects/Saved_Card__c/fields/Authnet_Payment_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Authnet_Payment_Profile_Id__c</fullName>
    <label>Authorize.net Payment Profile ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>