cruzy-demo/force-app/main/default/objects/Saved_Card__c/fields/Card_Brand__c.field-meta.xml
<CustomField>
    <fullName>Card_Brand__c</fullName>
    <label>Card Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Visa</fullName><default>false</default></value>
            <value><fullName>Mastercard</fullName><default>false</default></value>
            <value><fullName>American Express</fullName><default>false</default></value>
            <value><fullName>Discover</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>