cruzy-demo/force-app/main/default/objects/Saved_Card__c/fields/Expiry_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Month__c</fullName>
    <label>Expiry Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>