cruzy-demo/force-app/main/default/objects/Saved_Card__c/fields/Expiry_Year__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Year__c</fullName>
    <label>Expiry Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>