cruzy-demo/force-app/main/default/objects/Saved_Card__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <label>Default Card</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>