cruzy-demo/force-app/main/default/objects/Saved_Card__c/fields/Last_Four__c.field-meta.xml
<CustomField>
    <fullName>Last_Four__c</fullName>
    <label>Last Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>